[package]
name = "mock_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1.0.1"
clap = { version = "4.4.10", features = ["derive"] }
reqwest = { version = "0.11.22", features = ["json"] }
tokio = { version = "1.34.0", features = ["full"] }
